# myspot

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  Makefile  PRD.md  PROJECT_STRUCTURE.md  docker-compose.yml  init-extensions.sql
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d5bd684e2818_initial_schema.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: notes.py  places.py  sources.py  tags.py  visits.py
backend/app/auth/: api_key.py
backend/app/models/: __init__.py  audit.py  embedding.py  media.py  note.py  ontology.py  place.py  source.py  tag.py  visit.py
backend/app/schemas/: common.py  note.py  place.py  source.py  tag.py  visit.py
backend/app/services/: __init__.py  dedup_service.py  place_service.py
backend/app/utils/: cost_tracker.py  text_normalize.py
backend/tests/: conftest.py  test_dedup.py  test_places.py
docs/: manual_data_entry.md
frontend/: package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  notes.ts  places.ts  types.ts
frontend/src/pages/: AddPlacePage.tsx  EditPlacePage.tsx  PlaceDetailLitePage.tsx  RecentPlacesPage.tsx
